- Fixes Report Modal so it is always fully visible; - Now renders all three buttons, with Edit and Delete buttons conditional on whether the current user is the author of said Report; - Issue: getting header and content and footer to read CSS classes from Report.css; why doesn't it?? - Mostly works except for above and also Edit/Update doesn't do anything when clicked;

--- a/client/src/pages/components/Report.css
+++ b/client/src/pages/components/Report.css
@@ -1,6 +1,6 @@
 .report-item__ {
   margin: 1rem 0;
-  display:grid;
+  display: grid;
   border-style: solid;
   border-width: thin;
   box-shadow: 5px 5px 5px 0px #0e0d0e;
@@ -21,13 +21,11 @@
 
 .report-item__content {
   padding: 0;
-  width: auto;
 }
 
 .report-item__info {
   padding: 1rem;
   text-align: center;
-  display: inline-block;
 }
 
 .report-item__image {
